Prepearacion de Bot

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -448,6 +448,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
